--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,9 @@
 <!-- Hero Section-->
 <!-- TODO: Hero Slider ??? -->
-<section #hero class="hero home-page" ngxAnimatedGradient [colors]="colors()">
+<section #hero class="hero home-page" ngxAnimatedGradient [colors]="colors()"
+>
   <div
-    style="background-image: url(assets/img/hero-bg.png)"
+    style="background-image: url(assets/img/hero-bg.png); opacity: .22333"
     class="background img-fluid"
   ></div>
   <div class="container mb-5">
@@ -29,16 +30,22 @@
         <form action="#" class="subscription-form">
           <div class="form-group">
             <input
+            #email
               type="email"
               name="email"
               placeholder="Enter your email"
               class="form-control"
             />
-            <button type="button" class="btn border-light btn-primary">
-              Learn More
+            <button type="button" class="btn border-light btn-primary" (click)="sendNewsletter(email.value)">
+              Get Newsletter
             </button>
           </div>
         </form>
+      </div>
+    </div>
+    <div class="row">
+      <div class="downArrow bounce">
+        <i class="fa fa-chevron-down fa-2x"></i>
       </div>
     </div>
   </div>
@@ -215,3 +222,18 @@
 <!-- Page divider 2 -->
 <app-divider #dividerThree [content]="dividers[2]"></app-divider>
 <!-- end Divider-->
+
+<div *ngIf="newsletterSent" class="jumbotron text-xs-center bg-light m-auto animate slideInRight" style="position: fixed; height: 100%; width: 100%; top: 80px; left: 0;">
+    <button class="btn btn-sm pull-right" (click)="newsletterSent === false">
+      <i class="fa fa-times"></i>
+    </button>
+    <h1 class="display-3">Thank You!</h1>
+    <p class="lead"><strong>Please check your email</strong> for MedTelPlus monthly newsletter.</p>
+    <hr>
+    <p>
+      Having trouble? <a href="mailto:info@medtelplus.com" class="text-small">Contact Us</a>
+    </p>
+    <p class="lead">
+      <button class="btn btn-primary btn-sm" (click)="navigateTo('/')">Back to Home</button>
+    </p>
+  </div>
