--- a/src/app/shared/divider/divider.component.html
+++ b/src/app/shared/divider/divider.component.html
@@ -24,7 +24,7 @@
           [ngClass]="dividerColors?.text"
           [innerHTML]="dividerContent?.text | safeHtml"
         ></p>
-        <button class="mt-4 btn-lg" [ngClass]="dividerColors?.cta">
+        <button class="mt-4 btn-outline-light" [ngClass]="dividerColors?.cta">
           Learn More
         </button>
       </div>
