--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -22,6 +22,11 @@
         </p>
       </div>
     </div>
+    <div class="row">
+      <div class="downArrow bounce">
+        <i class="fa fa-chevron-down fa-2x"></i>
+      </div>
+    </div>
   </div>
 </section>
 <section>
