--- a/src/app/account/purchase-history/purchase-history.component.html
+++ b/src/app/account/purchase-history/purchase-history.component.html
@@ -1,3 +1,51 @@
-<p>
-  purchase-history works!
-</p>
+<div class="purchase-history-container container">
+  <div class="card mb-3">
+    <i class="fa fa-history card-img-top fa-2x p-4"></i>
+    <!-- <button class="btn sm btn-link" (click)="toggleList('shortList')">
+      <i class="fa fa-times"></i>
+    </button> -->
+    <div class="card-body">
+      <h4 class="card-title">Purchase History</h4>
+      <div class="p4" *ngIf="!historyLength">
+        You have no purchase history
+      </div>
+      <ngb-accordion
+        *ngIf="historyLength"
+        #acc="ngbAccordion"
+        [closeOthers]="true"
+        activeIds="shortList"
+      >
+        <ngb-panel title="Most Recent" id="shortList">
+          <ng-template ngbPanelContent>
+            <ul class="list-group list-group-flush">
+              <li
+                class="list-group-item"
+                *ngFor="let item of history; let i = index"
+              >
+                {{ item }}
+              </li>
+            </ul>
+          </ng-template>
+        </ngb-panel>
+        <ngb-panel title="All" id="longList">
+          <ng-template ngbPanelContent>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Item 1</li>
+              <li class="list-group-item">Item 2</li>
+              <li class="list-group-item">Item 3</li>
+            </ul>
+          </ng-template>
+        </ngb-panel>
+        <ngb-panel title="Declined" id="declined" *ngIf="historyFiltered">
+          <ng-template ngbPanelContent>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Item 1</li>
+              <li class="list-group-item">Item 2</li>
+              <li class="list-group-item">Item 3</li>
+            </ul>
+          </ng-template>
+        </ngb-panel>
+      </ngb-accordion>
+    </div>
+  </div>
+</div>
