--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,77 @@
 <header class="header">
-  <app-navbar></app-navbar>
+  <app-navbar #navbar></app-navbar>
 </header>
-
-<div [@routeAnimation]="getAnimationData(routerOutlet)">
-  <router-outlet #routerOutlet="outlet"></router-outlet>
+<div
+  class="d-flex"
+  id="wrapper"
+  [ngClass]="navbar.hideMobileMenu ? '' : 'toggled'"
+>
+  <!-- Sidebar -->
+  <div class="bg-secondary" id="sidebar-wrapper">
+    <div class="sidebar-heading">
+      <p class="lead">
+        {{ 'Customer: ' + navbar?.username || 'Welcome' }}
+      </p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <div
+        class="navbar p-1 hvr hvr-sweep-to-right"
+        style="background-color: rgba(0, 69, 143, .6);"
+      >
+        <h5 class="pl-2 text-light">
+          <small><i class="fa fa-phone"></i> 1 844 879 4788 Call Now!!</small>
+        </h5>
+      </div>
+      <li class="nav-item hvr hvr-sweep-to-right">
+        <button
+          (click)="navbar.navigateTo('home')"
+          class="btn btn-link nav-link"
+        >
+          <i class="fa fa-home"></i> Home
+        </button>
+      </li>
+      <!-- Link-->
+      <li class="nav-item hvr hvr-sweep-to-right">
+        <button
+          (click)="navbar.navigateTo('faq')"
+          class="btn btn-link nav-link"
+        >
+          <i class="fa fa-info"></i> Faq
+        </button>
+      </li>
+      <!-- Link-->
+      <li class="nav-item hvr hvr-sweep-to-right">
+        <button
+          (click)="navbar.navigateTo('contact')"
+          class="btn btn-link nav-link"
+        >
+          <i class="fa fa-envelope"></i> Contact
+        </button>
+      </li>
+      <!-- Link-->
+      <li class="nav-item hvr hvr-sweep-to-right">
+        <button
+          (click)="navbar.navigateTo('about')"
+          class="btn btn-link nav-link"
+        >
+          <i class="fa fa-list"></i> About
+        </button>
+      </li>
+      <li class="nav-item hvr hvr-sweep-to-right">
+        <button
+          (click)="navbar.navigateTo('store')"
+          class="btn btn-link nav-link"
+        >
+          <i class="fa fa-shopping-cart"></i> Store
+        </button>
+      </li>
+    </ul>
+  </div>
+  <!-- /#sidebar-wrapper -->
+  <!-- Page Content -->
+  <main #wrapper id="page-content-wrapper">
+    <router-outlet #routerOutlet="outlet" id="mainContent"></router-outlet>
+  </main>
 </div>
 
 <app-footer class="pt-4"></app-footer>
