--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,34 +1,27 @@
-
-<section class="cart bgwhite p-t-70 p-b-100" id="cartSection">
-		<div class="container">
-			<div class="">
-        <div class="text-center p-5 m-auto" [hidden]="items.length">
-          <h4 class="text-bold">No ITems In Cart!</h4>
-          <button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4 p-2 mt-3" (click)="navigateTo('/store')">
+<section #cartSection class="cart bgwhite p-t-70 p-b-100" id="cartSection" *ngIf="cart">
+  <div class="container">
+    <div class="pt-4">
+      <div class="text-center p-5 m-auto" [hidden]="items">
+        <h4 class="text-bold">No ITems In Cart!</h4>
+        <button class="btn btn-primary mt-1" (click)="navigateTo('/store')">
           Go to store
         </button>
-        </div>
-				<div class="wrap-table-shopping-cart bgwhite" *ngIf="items.length">
-					<table class="table-shopping-cart">
-						<tr class="table-head">
-							<th class="column-1"></th>
-							<th class="column-2">Product</th>
-							<th class="column-3">Price</th>
-							<th class="column-4 p-l-70">Quantity</th>
-							<th class="column-5">Total</th>
-						</tr>
-            
-						<tr class="table-row" *ngFor="let item of items; let i = index;">
-							<td class="column-1">
-								<div class="cart-img-product b-rad-4 o-f-hidden">
-									<img [src]="item?.imgUrl" alt="IMG-PRODUCT">
-								</div>
-							</td>
-							<td class="column-2">{{item?.productName}}</td>
-							<td class="column-3">${{item?.price}}</td>
-							<td class="column-4">
-								<div class="flex-w bo5 of-hidden w-size17">
-									<button class="btn-num-product-down color1 flex-c-m size7 bg8 eff2" (click)="decreaseQuantity(i)">
+      </div>
+
+      <div class="col-md-6 order-md-2 m-auto" *ngIf="items">
+        <h4 class="d-flex justify-content-between align-items-center mb-3">
+          <span class="text-muted">Your cart</span>
+          <span class="badge badge-secondary badge-pill">{{items?.length || 0}}</span>
+        </h4>
+        <ul class="list-group mb-3">
+          <li class="list-group-item d-flex justify-content-between align-items-center  lh-condensed"
+            *ngFor="let item of items; let i = index;">
+            <img [src]="item?.imgUrl" alt="" [width]="80" class="img-thumbnail img-fluid">
+            <div class="pull-left">
+              <h6 class="my-0">{{item?.productName}}</h6>
+              <small class="text-muted">{{item?.caption}}</small>
+            </div>
+            <!-- <button class="btn-num-product-down color1 flex-c-m size7 bg8 eff2" (click)="decreaseQuantity(i)">
 										<i class="fs-12 fa fa-minus" aria-hidden="true"></i>
 									</button>
 
@@ -36,122 +29,67 @@
 
 									<button class="btn-num-product-up color1 flex-c-m size7 bg8 eff2" (click)="increaseQuantity(i)">
 										<i class="fs-12 fa fa-plus" aria-hidden="true"></i>
-									</button>
-								</div>
-							</td>
-							<td class="column-5">{{getItemTotal(item) | currency}}</td>
-							<td class="column-5">
-                <button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4" (click)="removeItemFromCart(userId, item)">
-							<i class="fa fa-times"></i> Delete
-						</button>
-              </td>
-						</tr>
-					</table>
-				</div>
-			</div>
+									</button> -->
+            <span class="text-muted pt-4">${{item?.price}}</span>
+            <button class="btn btn-link btn-sm p-0" (click)="removeItemFromCart(userId, item)"><i
+                class="fa fa-trash"></i></button>
+          </li>
+          <li class="list-group-item d-flex justify-content-between bg-light" *ngIf="couponUsed && couponValid">
+            <div class="text-success">
+              <h6 class="my-0">Promo code</h6>
+              <small>{{cart?.coupon?.couponCode}}</small>
+            </div>
+            <span class="text-success">-${{cart?.coupon?.discountAmount}}</span>
+          </li>
+        </ul>
 
-			<div [hidden]="!items.length" class="flex-w flex-sb-m p-t-25 p-b-25 bo8 p-l-35 p-r-60 p-lr-15-sm">
-				<div class="flex-w flex-m w-full-sm">
-					<div class="size11 bo4 m-r-10">
-						<input #coupon class="sizefull s-text7 p-l-22 p-r-22" type="text" name="coupon-code" placeholder="Coupon Code">
-					</div>
-
-					<div class="size12 trans-0-4 m-t-10 m-b-10 m-r-10">
-						<button [hidden]="couponUsed && couponValid" class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4" (click)="applyCoupon(coupon.value)">
-							Apply coupon
-            </button>
-            <div [hidden]="!couponUsed || couponUsed && couponValid" class="card-body text-center text-light bg-dark p-2 mt-1 fadeInDown animate">Invalid Coupon Code! Check spelling or enter a new code <br/>
-            <button class="btn btn-primary text-danger" (click)="removeCoupon(coupon)">Remove Coupon</button></div>
-					</div>
-				</div>
-
-				<div class="size10 trans-0-4 m-t-10 m-b-10">
-					<button [hidden]="!coupon.value" class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4" (click)="removeCoupon(coupon)">
-						Remove
-					</button>
-				</div>
-			</div>
-
-			<div *ngIf="items.length" class="bo9 w-size18 p-l-40 p-r-40 p-t-30 p-b-38 m-t-30 m-r-0 m-l-auto p-lr-15-sm">
-				<h5 class="m-text20 p-b-24">
-					Cart Totals
-				</h5>
-
-				<div class="flex-w flex-sb-m p-b-12">
-					<span class="s-text18 w-size19 w-full-sm">
-						Subtotal:
-					</span>
-
-					<span [hidden]="couponUsed" class="m-text21 w-size20 w-full-sm">
-						{{getCartSubtotal(items) | currency}}
-          </span>
-          <span [hidden]="!couponUsed && !couponValid" class="m-text21 w-size20 w-full-sm">
-						{{getDiscountTotal(coupon.value) | currency}}&nbsp; Discounted
-					</span>
-				</div>
-
-				<div class="flex-w flex-sb bo10 p-t-15 p-b-20">
-					<span class="s-text18 w-size19 w-full-sm">
-						Shipping:
-					</span>
-
-					<div class="w-size20 w-full-sm">
-						<p class="s-text8 p-b-23">
-							There are no shipping methods available. Please double check your address, or contact us if you need any help.
-						</p>
-
-						<span class="s-text19">
-							Calculate Shipping
-						</span>
-
-						<div class="rs2-select2 rs3-select2 rs4-select2 bo4 of-hidden w-size21 m-t-8 m-b-12">
-							<select class="selection-2" name="country" style="width: 100%;">
-								<option>Select a country...</option>
-								<option>US</option>
-								<option>UK</option>
-								<option>Japan</option>
-							</select>
-						</div>
-
-						<div class="size13 bo4 m-b-12">
-						<input class="sizefull s-text7 p-l-15 p-r-15" type="text" name="state" placeholder="State /  country">
-						</div>
-
-						<div class="size13 bo4 m-b-22">
-							<input class="sizefull s-text7 p-l-15 p-r-15" type="text" name="postcode" placeholder="Postcode / Zip">
-						</div>
-
-						<div class="size14 trans-0-4 m-b-10">
-							<button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
-								Update Totals
-							</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="flex-w flex-sb-m p-t-26 p-b-30">
-					<span class="m-text22 w-size19 w-full-sm">
-						Total:
-					</span>
-
-					<span [hidden]="couponUsed" class="m-text21 w-size20 w-full-sm">
-						{{getCartSubtotal(items) | currency: 'us'}}
-          </span>
-          <span [hidden]="!couponUsed" class="m-text21 w-size20 w-full-sm">
-						{{getDiscountTotal(coupon.value) | currency: ''}}&nbsp; <i class="fa fa-dollar text-primary"></i> Coupon Discount {{cart?.coupon?.couponCode}}
-					</span>
-				</div>
-
-				<div class="size15 trans-0-4 m-b-10">
-					<button disabled="subtotal === 0" class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4" (click)="updateCart(userId, cart);navigateTo('/checkout')">
-						Proceed to Checkout
-					</button>
+        <form class="card p-0">
+          <div class="input-group">
+            <input #coupon type="text" class="form-control" placeholder="Promo code">
+            <div class="input-group-addon">
+              <button [hidden]="couponUsed" (click)="applyCoupon(coupon.value)"
+                style="border-radius: 0;" class="btn btn-primary">Redeem</button>
+              <button *ngIf="coupon.value && couponUsed" class="btn btn-secondary"
+                style="border-radius: 0;" (click)="removeCoupon(coupon)">
+                Remove
+              </button>
+            </div>
+          </div>
+        </form>
+        <div [hidden]="!couponUsed || couponUsed && couponValid"
+          class="card-body text-center text-light bg-dark p-2 mt-1 fadeInDown animate">Invalid Coupon Code! Check
+          spelling or enter a new code <br />
+          <button class="btn btn-outline-danger" (click)="removeCoupon(coupon)">Remove Coupon</button>
         </div>
-        <div class="size15 trans-0-4">
-					<button class="flex-c-m sizefull bg-primary bo-rad-23 hov1 s-text1 trans-0-4" (click)="navigateTo('/store')">
-						Continue Shopping
-					</button>
-				</div>
-			</div>
-		</div>
-	</section>
+      </div>
+    </div>
+
+    <div *ngIf="items" class="col-md-6 order-md-2 m-auto pt-4">
+      <h4 class="d-flex justify-content-between align-items-end mb-3">
+        <span class="text-muted">Cart Totals</span>
+      </h4>
+
+      <div class="flex-w flex-sb-m p-b-12">
+        <span class="s-text18 w-size19 w-full-sm">
+          Subtotal:
+        </span>
+
+        <span [hidden]="couponUsed" class="m-text21 w-full-sm">
+          {{getCartSubtotal(items) | currency}}
+        </span>
+        <span [hidden]="!couponUsed && !couponValid" class="m-text21 w-full-sm" *ngIf="cart?.coupon?.couponCode">
+          {{getDiscountTotal(cart?.coupon?.couponCode) | currency}}&nbsp; Discounted {{cart?.coupon?.amountDiscounted}}
+        </span>
+      </div>
+      <div class="d-flex">
+        <button [disabled]="subtotal === 0" class="m-1 btn btn-outline-primary col-md-6 col-sm-12"
+          (click)="navigateTo('/checkout')">
+          Checkout
+        </button>
+        <button class="m-1 btn btn-secondary col-md-6 col-sm-12" (click)="navigateTo('/store')">
+          Shop
+        </button>
+      </div>
+    </div>
+  </div>
+</section>
