--- a/src/app/store/product-list/product-list.component.html
+++ b/src/app/store/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <div
   *ngIf="loggedIn"
-  class="card slideInLeft animated"
+  class="card"
   [hidden]="!showToaster"
   style="position: fixed; top: 75vh; right: 32px; z-index: 2000;"
 >
@@ -37,7 +37,10 @@
           *ngFor="let cat of item?.category"
           >{{ cat }}</span
         >
-        <div class="block2-overlay trans-0-4" [hidden]="!loggedIn">
+        <div
+          class="block2-overlay trans-0-4 hvr hvr-sweep-to-top hvr-slow active"
+          *ngIf="loggedIn"
+        >
           <button
             class="block2-btn-addwishlist trans-0-4"
             (click)="addToWishList(item.productId)"
@@ -46,21 +49,24 @@
             <i class="fa fa-heart-o icon_heart dis-none" aria-hidden="true"></i>
           </button>
 
-          <div class="block2-btn-addcart w-size1 trans-0-4">
+          <div class="block2-btn-addcart w-size12">
             <!-- Button -->
             <button
-              *ngIf="loggedIn || userCart.items.includes(item.productId)"
+              *ngIf="loggedIn || !userCart?.items?.includes(item.productId)"
               (click)="addToCart(item.productId)"
-              class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
+              class="btn btn-secondary"
             >
               Add to Cart
             </button>
           </div>
         </div>
-        <div class="block2-overlay trans-0-4" [hidden]="loggedIn">
-          <div class="block2-btn-addcart w-size1 trans-0-4">
+        <div
+          class="block2-overlay trans-0-4 hvr hvr-sweep-to-top hvr-slow active"
+          [hidden]="loggedIn"
+        >
+          <div class="block2-btn-addcart w-size12">
             <!-- Button -->
-            <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+            <button class="btn btn-secondary">
               Create Account
             </button>
           </div>
@@ -70,12 +76,12 @@
       <div class="block2-txt p-t-20 text-center">
         <button
           (click)="selectProduct(item.productId)"
-          class="btn btn-link m-auto block2-name dis-block s-text3 p-b-5"
+          class="btn btn-link m-auto block2-name dis-block p-b-5"
         >
           {{ item?.caption }}
         </button>
         <span
-          class="badge badge-primary"
+          class="badge badge-secondary"
           (click)="addToCart(item.productId)"
           style="font-size: 1.5rem;"
         >
